--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -30,11 +30,11 @@ h3 {
   font-weight: bold;
 }
 
-.md-typeset {
+/* .md-typeset {
   font-size: 1rem;
-}
+} */
 
-.md-typeset .admonition {
+/* .md-typeset .admonition {
   font-size: 1em;
   font-family: "Open Sans", sans-serif;
-}
+} */
