--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -38,3 +38,17 @@ h3 {
   font-size: 1em;
   font-family: "Open Sans", sans-serif;
 } */
+
+iframe {
+  display: block;
+  border-style: none;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 20%;
+  padding: 5px;
+}
